# Store

./: .gitignore  CMakeLists.txt  README.md
cmake/: TestFunctions.cmake
include/common/: Platform.h  StringUtils.h  ThreadPool.h  Types.h
include/messages/: Constants.h  GetMessageRequest.h  GetMessageResponse.h  MessageBase.h  MessageHelper.h  MessageType.h  PutMessageRequest.h
include/networking/: Common.h  Constants.h  Endpoint.h  EndpointBuilder.h  Types.h
src/common/: Platform.cpp  StringUtils.cpp  ThreadPool.cpp
src/messages/: GetMessageRequest.cpp  GetMessageResponse.cpp  MessageHelper.cpp  PutMessageRequest.cpp
src/networking/: Common.cpp  Endpoint.cpp  EndpointBuilder.cpp
test/common/: StringUtilsTest.cpp  ThreadPoolTest.cpp
test/messages/: GetMessageRequestTest.cpp  GetMessageResponseTest.cpp  MessageHelperTest.cpp  PutMessageRequestTest.cpp
test/networking/: CommonTest.cpp  EndpointTest.cpp
